--- a/index.html
+++ b/index.html
@@ -540,13 +540,13 @@
                     <br>
                     <div class="social-links">
                         <a href="https://www.instagram.com/alway.ai/" target="_blank">
-                            <img src="restaurent/f.jpeg" alt="Facebook" width="32" height="32" >
+                            <img src="AI/f.jpeg" alt="Facebook" width="32" height="32" >
+                        </a>
+                        <a href="https://wa.me/7025961726" target="_blank">
+                            <img src="AI/w.png" alt="X" width="32" height="32" >
                         </a>
                         <a href="https://www.instagram.com/alway.ai/" target="_blank">
-                            <img src="restaurent/x.png" alt="X" width="32" height="32" >
-                        </a>
-                        <a href="https://www.instagram.com/alway.ai/" target="_blank">
-                            <img src="restaurent/i2.png" alt="Instagram" width="32" height="32" >
+                            <img src="AI/i2.png" alt="Instagram" width="32" height="32" >
                         </a>
                     </div>
                 </div>
